--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=GEO-SERVICE
 eureka.instance.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 #-------------------- server properties ---------------
-server.port=8300
+server.port=8600
 server.error.include-message=always
 
 #--------------------- Logging ------------------
@@ -17,9 +17,14 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 
 #--------------------JPA-ORM Properties-----------------
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 
 #--------------------DEV----------------
 spring.devtools.restart.enabled = false
+
+## ----------------- Enable SQL script execution -----------
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
